# packages/example-schemas/src/index.ts
@@ -10,8 +10,11 @@ export {
   BlockNumberPathParams,
   BlockNumberResponse,
   CreateMessageRequest,
+  EventList,
   HealthCheckResponse,
   HelloResponse,
+  IndexedEvent,
+  ListEventsQuery,
   Message,
   MessageList,
   RecentMessagesQuery,
